# OpenGL-noob-engine

./: .gitignore  CMakeLists.txt  makefile  notes.md
includes/: camera.h  defines.h  entity.h  grid.h  shader.h
src/: camera.cpp  glad.c  main.cpp  shader.cpp
